--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -207,7 +207,7 @@
 
 
 {%- block base_javascript -%}
-<script src="{{ url_for('static',filename='javascript/corsi.js') }}"></script>
+<!--<script src="{{ url_for('static',filename='javascript/corsi.js') }}"></script>-->
 <script src="{{ url_for('static',filename='javascript/lezioni.js') }}"></script>
 
 <script src="{{ url_for('static',filename='javascript/materializedatetimepicker.js') }}"></script>
