--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -91,7 +91,7 @@
                                             {%- endfor -%}
     
     
-                                            <button type="submit" fomr="nuova_lezione_insert" class="waves-effect waves-light btn deep-orange darken-3" onclick="">
+                                            <button type="submit" form="nuova_lezione_insert" class="waves-effect waves-light btn deep-orange darken-3" onclick="">
                                                 Conferma<i class="material-icons right">check</i>
                                             </button>
     
