--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,9 +20,8 @@
 							<li class="tab col s3"><a class="white-text" href="#registrati">Registrati</a></li>
 						</ul>
 					</div>
-
+					<!--form per il login-->
 					<div id="login" class="col s12">
-
 						<div>
 							<div class="row" style="padding-top: 20px; padding-left: 15px; padding-right: 15px;">
 								
@@ -57,9 +56,8 @@
 
 
 					</div>
-
+					<!--form per la registrazione-->
 					<div id="registrati" class="col s12">
-
 						<div>
 							<div class="row" style="padding-top: 20px; padding-left: 15px; padding-right: 15px;">
 								
@@ -120,15 +118,11 @@
 										<button class="waves-effect waves-light btn deep-orange darken-3 "
 											type="submit" name="registrati">Registrati
 											<i class="material-icons right">send</i></button>
-
-					
 									</div>
 								</form>
 							</div>
 
 						</div>
-
-
 					</div>
 				</div>
 			</div>
