--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -1,4 +1,5 @@
 <li>
+    <!--titolo del corso-->
     <div class="collapsible-header" style="display: block;">
         {{ corso.titolo }}
     
@@ -6,6 +7,7 @@
             <i class="material-icons">expand_more</i>
         </div>
     </div>
+    <!--visualizza i dati del corso-->
     <div class="collapsible-body">
         <div class="row" style="margin-bottom: 0px;">
             <div class="col s11 offset-s1">
@@ -22,7 +24,8 @@
                     <div><div class="col s4"><b>Iscrizioni minime:</b></div><div class="col s8">{{ corso.iscrizioniminime }}</div></div>
                     <div><div class="col s4"><b>Studenti iscritti:</b></div><div class="col s8">{{ num_iscritti }}/{{ corso.iscrizionimassime }}</div></div>
                 </div>
-
+                
+                <!--form per l'aggiornamento del corso, generato quando si clicca sul pulsante per la modifica-->
                 <div class="row" id="boh" style="display: none;">
 					{%- set class_name = 'Corsi' -%}
                     <form id="{{ corso.id }}" class="col s12" action="/corso_update" method="POST">
@@ -69,12 +72,13 @@
 
                     </form>
                 </div>
-
-
+                <!--fine form aggiornamento-->
 
 
                 {%- if authenticated -%}
                     {%- if is_docente -%}
+                        <!--visualizza pulsanti di modifica ed elimina e visualizza statistiche
+                             in caso sia un corso appartenente al docente loggato nel sito-->
                         {%- if corso in i_tuoi_corsi -%}
                             <div class="left" style="display: block;">
                                 <form onsubmit="return confirmDelete('{{ corso.titolo  }}')" action="/corso_delete" method="POST">
@@ -86,16 +90,12 @@
                             </div>
                            
                             <div>
-                             
+                                <!--pulsanti dinamici, visualizzati in base all'azione dell'utente, vedi corso_elem.js -->
                                 <div class="right" style="display: block;">
-                                    
                                     <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowFormModificaCorso(event, `{{ corso.id }}`)">
                                         Modifica <i class="material-icons right">create</i>
                                     </button>
-                                    
-                                        
                                 </div>
-                              
                                 <div class="right" style="display: none;">
                                     <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowFormModificaCorso(event)">
                                         Annulla
@@ -104,8 +104,10 @@
                                         Salva modifiche <i class="material-icons right">create</i>
                                     </button>
                                 </div>
-                                
-                                 <div class="right" style="display: block; padding-right: 10px;">
+                                <!--fine pulsanti dinamici-->
+
+                                <!--pulsante per mostrare le statistiche del corso selezionato-->
+                                <div class="right" style="display: block; padding-right: 10px;">
                                 <form action="/statistiche" method="POST">
                                     <input name="idcorso" type="number" style="display:none" value="{{ corso.id }}">
                                     <button class="waves-effect waves-light btn deep-orange darken-3">
@@ -115,10 +117,13 @@
                                     </button>
                                 </form>  
                                 </div>
+                                <!--fine statistiche-->
                             </div>
                         {%- endif -%}
                     {%- else -%}
+                    <!--studenti-->
                         {%- if corso in i_tuoi_corsi -%}
+                        <!--pulsante disiscrizione corso-->
                         <form action="/disiscrizione_corso" method="POST">
                             <input name="idcorso" type="number" style="display:none" value="{{ corso.id }}">
                             <button class="waves-effect waves-light btn deep-orange darken-3 right" type="submit">
@@ -136,7 +141,7 @@
                                 Iscrizioni chiuse, aprono il {{ corso.inizioiscrizioni|extract_date }}
                             </div>
                             {%- else -%}
-
+                            <!--pulsante iscrizione corso-->
                             <form action="/iscrizione_corso" method="POST">
                                 <input name="idcorso" type="number" style="display:none" value="{{ corso.id }}">
                                 <button class="waves-effect waves-light btn deep-orange darken-3 right" type="submit">
