--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,7 +14,10 @@
     <div class="testo_foto">
 		{%- if name -%}
         <h2>Welcome back {{ name }}</h2>
-		{%- endif -%}
+		{%- else -%}
+      <h1>Università Ca' Foscari<br>Venezia</h1>
+    {%- endif -%}
+
     </div>
 </div>
 
