--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -1,3 +1,11 @@
+img.img-responsive {
+    float: left;
+    padding: 0px;
+    margin: 8px 30px 8px 0px;
+    height: 50px;
+    width: auto;
+  }
+
 body {
     display: flex;
     min-height: 100vh;
