--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -14,5 +14,11 @@ main {
     left: 50%;
     text-align: center;
     transform: translate(-50%, -50%);
-    color: red;
+    color: #e23a07;
+    font-size: 92px;
+    font-weight: 600;
+    text-shadow: 1px 1px 2px #000;
 }
+
+
+
