--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -58,6 +58,7 @@
                                <i class="small material-icons prefix">
                                 {%- if element.isDatetime -%}      calendar_month
                                 {%- elif element.isTimedelta -%}   access_time
+                                {%- elif element.isNumeric -%}	   123 
                                 {%- elif element.isMultiChoice -%} arrow_drop_down
                                 {%- else -%}                       text_fields
                                 {%- endif %} 
